# AI-Assistant

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/voice_pipeline_mvp_20260411/: metadata.json  plan.md  spec.md
conductor/tracks/mobile_companion_20260418/: agent.md  architecture.md  metadata.json  plan.md  prd.md
conductor/tracks/voice_pipeline_mvp_20260411/: plan.md  spec.md
config/: intents.yaml  settings.yaml
src/: __init__.py  __main__.py  cli.py  daemon.py
src/ai/: __init__.py  agent.py
src/ai/providers/: __init__.py
src/ai/router/: __init__.py  classifier.py  patterns.py  router.py
src/core/: auth.py  config.py  exceptions.py  logger.py  setup.py
src/integrations/: __init__.py
src/integrations/system/: apps.py
src/pet/: __init__.py  chatwindow.py  pet.py  sprites.py
src/voice/: audio_capture.py  overlay_bridge.py  pipeline.py  start.py  stt.py  tts.py  wake_word.py
src/workflows/: __init__.py  cli.py  generator.py  manager.py  sandbox.py  scheduler.py
tests/test_router/: test_classifier.py  test_integration.py  test_patterns.py  test_router.py
tests/test_voice/: test_audio_capture.py  test_overlay_voice.py  test_stt.py  test_tts.py  test_voice_config.py  test_voice_pipeline.py  test_wake_word.py
tests/test_workflows/: test_cli.py  test_generator.py  test_manager.py  test_sandbox.py  test_scheduler.py
