[project]
name = "ai-assistant"
version = "0.1.0"
description = "Personal AI assistant with voice commands, app integrations, and remote phone access"
requires-python = ">=3.12"
dependencies = [
    # Server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1",

    # AI Providers (free)
    "groq>=0.15",
    "google-genai>=1.0",

    # Voice
    "sounddevice>=0.5",
    "vosk>=0.3",
    "pyttsx3>=2.98",
    "edge-tts>=6.1",
    "numpy>=2.0",

    # Integrations
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.160",
    "pywinauto>=0.6",

    # Config & Utils
    "pydantic-settings>=2.7",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "httpx>=0.28",

    # Tunnel
    "pyngrok>=7.2",
]

[project.optional-dependencies]
paid = [
    "anthropic>=0.42",
    "openai>=1.60",
]
microsoft = [
    "msgraph-sdk>=1.16",
]
messaging = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.4",
]
voice-extra = [
    "openwakeword>=0.6",
]
all = [
    "ai-assistant[paid,microsoft,messaging,voice-extra]",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
assistant = "src.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
