[project]
name = "ai-assistant"
version = "0.1.0"
description = "Personal AI assistant with voice commands, app integrations, and remote phone access"
requires-python = ">=3.12"
dependencies = [
    # Server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1",

    # AI Orchestration (LangGraph + LangChain)
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-groq>=0.2",
    "langchain-google-genai>=2.1",
    "langchain-ollama>=0.3",

    # Voice
    "sounddevice>=0.5",
    "vosk>=0.3",
    "pyttsx3>=2.98",
    "edge-tts>=6.1",
    "numpy>=2.0",

    # Integrations
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.160",
    "pywinauto>=0.6",

    # System tray & notifications
    "pystray>=0.19",
    "Pillow>=11.0",
    "winotify>=1.1",

    # Config & Utils
    "pydantic-settings>=2.7",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "httpx>=0.28",

    # Tunnel
    "pyngrok>=7.2",
]

[project.optional-dependencies]
paid = [
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
]
microsoft = [
    "msgraph-sdk>=1.16",
]
messaging = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.4",
]
voice-extra = [
    "openwakeword>=0.6",
]
router = [
    "sentence-transformers>=3.0",
]
all = [
    "ai-assistant[paid,microsoft,messaging,voice-extra,router]",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
assistant = "src.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
